<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">
    <include layout="@layout/main_toolbar" android:id="@+id/mtoolbar"></include>
    <TextView
            android:text="@string/e_mailEN"
            android:layout_width="325dp"
            android:layout_height="28dp" android:id="@+id/usernameText"
            android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="300dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>
    <EditText
            android:layout_width="313dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPersonName|textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/passwordInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginStart="52dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/loginTH"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_buttonadd"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:id="@+id/LoginButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" app:layout_constraintEnd_toEndOf="@+id/passwordInput"
    />
    <TextView
            android:text="@string/registerTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:id="@+id/textlinktoregister" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" app:layout_constraintStart_toStartOf="@+id/passwordInput"
    />
    <EditText
            android:layout_width="313dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPersonName"
            android:hint="@string/e_mailEN"
            android:ems="10"
            android:id="@+id/userNameInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/iconlogin"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>