<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
    <include layout="@layout/main_toolbar" android:id="@+id/mtoolbar"></include>
    <TextView
            android:text="@string/registerTH"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/mtoolbar" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="ชื่อผู้ใช้ (Username)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/regisUsername" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/passwordTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textErrorPass" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisPassword"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="15dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/regisPassword" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/confirmPassTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/regisConfPass" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/e_mailEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisConfPass" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mailEN"
            android:ems="10"
            android:id="@+id/regisEmail" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="ชื่อ-นามสกุล"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView66" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisEmail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:hint="ชื่อ-นามสกุล"
            android:ems="10"
            android:id="@+id/regisName" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView66" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            tools:layout_editor_absoluteY="548dp"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/spinnerDay"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/spinnerMount"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginStart="10dp" app:layout_constraintStart_toEndOf="@+id/spinnerDay"/>
    <Spinner
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/spinnerYear"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginStart="10dp" app:layout_constraintStart_toEndOf="@+id/spinnerMount"/>
    <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDay" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="number"
            android:hint="@string/height"
            android:ems="10"
            android:id="@+id/regisHeight" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisHeight" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="number"
            android:hint="@string/weight"
            android:ems="10"
            android:id="@+id/regisWeight" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/routine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/regisWeight" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <Spinner
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/spinnerRoutine"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <TextView
            android:text="@string/sexTH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerRoutine" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <Spinner
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            tools:layout_editor_absoluteY="548dp"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/spinnerSex"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <TextView
            android:text=" "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textErrorData" android:layout_marginTop="20dp"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSex" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/registerTH"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_buttonadd"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:id="@+id/regisButton"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textErrorData"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="268dp"
            android:layout_marginBottom="50dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/regisButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>